--- a/_sass/_anchors.sass
+++ b/_sass/_anchors.sass
@@ -15,12 +15,12 @@ a[href^="#"]
   border-bottom: 1px dotted rgba(0,0,0,0.1)
 
 a[href]:hover 
-  color: #000
+  color: $primary-text-color
   background-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 50%)
 
 a[href^="#"]:hover 
   background: inherit
-  border-color: black
+  border-color: $primary-text-color
 
 a.img
   border: none
