--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -16,7 +16,7 @@
     +margin(null null 0)
 
   &__subheading
-    color: #aaa
+    color: $secondary-text-color
     display: block
     font-size: 14px
     +margin(null null .5rem)
@@ -27,8 +27,8 @@
 
   &:hover 
     .post-preview__heading
-      background-color: black
-      color: white
+      background-color: $primary-text-color
+      color: $primary-color-text
 
 /* post */
 .post, .tale
@@ -37,7 +37,7 @@
       font-weight: 300
       +margin(0)
     &__subheading
-      color: #aaa
+      color: $secondary-text-color
       font-size: 14px
   > p
     font-size: 18px
