--- a/_sass/_collection.sass
+++ b/_sass/_collection.sass
@@ -7,7 +7,7 @@
     margin: 0 0 .5rem
 
     &__date
-      color: #aaa
+      color: $secondary-text-color
 
 @media only screen and (min-device-width: 568px)
   .collection
