--- a/_sass/_reset.sass
+++ b/_sass/_reset.sass
@@ -4,7 +4,7 @@
 
 body
   background: #fff
-  color: #222
+  color: $primary-text-color
   font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace
   font-size: 16px
   line-height: 1.5
