--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+  <base href="{{ '' || absolute_url }}">
   <link
     rel="canonical"
     href="{{ page.url | replace:'index.html','' | absolute_url }}">
@@ -26,4 +27,6 @@
   <link
     rel="stylesheet"
     href="{{ "/css/main.css" | relative_url }}">
+  <script
+    src="{{ "/js/main.js" | relative_url }}"></script>
 </head>
