--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% if page.date %}
-  {% assign classname = "night-mode" %}
+  {% assign classname = "" %}
 {% else %}
-  {% assign classname = "night-mode main" %}
+  {% assign classname = "main" %}
 {% endif %}
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
@@ -10,6 +10,7 @@
 
   <body class="{{classname}}">
 
+    {% include actions.html %}
     {% include header.html %}
 
     <main class="page-content" aria-label="Content">
