WIP: loading Goordreads list after DOM load

--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -1,8 +1,8 @@
-<div class="site-actions">
-  <div class=wrapper">
+<div class="wrapper">
+  <div class="site-actions">
     <ul>
-      <li class="trigger-mode night"><a id="trigger-night" href="{{ page.url | relative_url }}">Modo nocturno</a></li>
-      <li class="trigger-mode day"><a href="{{ page.url | relative_url }}">Modo diurno</a></li>
+      <li class="trigger-mode night"><a id="trigger-night" href="{{ page.url | absolute__url }}">Modo nocturno</a></li>
+      <li class="trigger-mode day"><a href="{{ page.url | absolute_url }}">Modo diurno</a></li>
     </ul>
   </div>
 </div>
