--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,6 +28,7 @@
       {% endif %}
     </nav>
   </div>
+  {% include actions.html %}
   <div class="wrapper">
     <div class="site-header__headline">
         {% if page.autogen == nil  and page.home != true %}
