Night mode completed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       {% if site.pages %}
         <ul>
           <li class="main__hidden">
-            <a href="/">Hogar</a>
+            <a href="{{ "/" | relative_url }}">Hogar</a>
           </li>
           {% for m_page in site.pages reversed %}
             {% if m_page.title and
