--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -1,8 +1,14 @@
 <div class="wrapper">
   <div class="site-actions">
+    {% assign tokens = page.url | relative_url | split: '/' %}
     <ul>
-      <li class="trigger-mode night"><a id="trigger-night" href="{{ page.url | absolute__url }}">Modo nocturno</a></li>
-      <li class="trigger-mode day"><a href="{{ page.url | absolute_url }}">Modo diurno</a></li>
+      <li class="trigger-mode">
+        {% if tokens[1] == 'noche' %}
+        <a href="{{ page.url }}">Modo diurno</a>
+        {% else %}
+        <a href="/noche{{ page.url }}">Modo nocturno</a>
+        {% endif %}
+      </li>
     </ul>
   </div>
 </div>
