--- a/_sass/_anchors.sass
+++ b/_sass/_anchors.sass
@@ -3,11 +3,10 @@ a[href]
   color: inherit
   text-decoration: none
   padding-bottom: 0.025em
-  /*display: inline-block*/
   background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%)
   background-repeat: repeat-x
-  background-size: 2px .1em
-  background-position: 0 1.025em
+  background-size: 2px 1px
+  background-position: 0 .972em
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff
 
 a[href^="#"] 
