--- a/_sass/_pictures.sass
+++ b/_sass/_pictures.sass
@@ -1,3 +1,6 @@
+.placeholder.picture-shrink
+  background: transparent
+
 @media only screen and (min-device-width: 568px)
   .picture-shrink
     +margin(null auto)
