--- a/_sass/_paginator.sass
+++ b/_sass/_paginator.sass
@@ -20,6 +20,12 @@
       background: none
 
       &:hover
-        background: #000
+        background: $primary-text-color
         color: $primary-color-text
         text-shadow: none
+
+.night-mode
+  .paginator
+    a.paginator-item:hover
+      background: $ternary-text-color
+      color: $primary-text-color
