--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -9,4 +9,5 @@ $primary-color-text:   #FFFFFF
 $accent-color:         #9E9E9E
 $primary-text-color:   #212121
 $secondary-text-color: #757575
+$ternary-text-color:   #CCCCCC
 $divider-color:        #BDBDBD
