--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+  <base href="{{ '' || absolute_url }}">
   <link
     rel="canonical"
     href="{{ page.url | replace:'index.html','' | absolute_url }}">
@@ -14,9 +15,6 @@
     type="application/rss+xml"
     title="{{ site.title | escape }}"
     href="{{ "/feed.xml" | relative_url }}">
-  <link
-    rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Inconsolata:400,700&amp;subset=latin-ext">
   <link
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
