--- a/_sass/_anchors.sass
+++ b/_sass/_anchors.sass
@@ -6,7 +6,7 @@ a[href]
   background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%)
   background-repeat: repeat-x
   background-size: 2px 1px
-  background-position: 0 .972em
+  background-position: 0 1.1em
   text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff
 
 a[href^="#"] 
@@ -24,3 +24,12 @@ a[href^="#"]:hover
 a.img
   border: none
   background: transparent !important 
+
+.night-mode
+  a[href] 
+    background-image: linear-gradient(to bottom, rgba(255,255,255,.5) 50%, rgba(255,255,255,0) 50%)
+    text-shadow: -1px -1px 0 $primary-text-color, 1px -1px 0 $primary-text-color, -1px 1px 0 $primary-text-color, 1px 1px 0 $primary-text-color
+
+  a[href]:hover 
+    color: $primary-color-text
+    background-image: linear-gradient(to bottom, rgba(255,255,255,1) 50%, rgba(255,255,255,0) 50%)
