--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -1,5 +1,5 @@
 .site-footer
-  color: $secondary-text-color
+  color: $ternary-text-color
   font-size: 14px
   height: 70px
 
@@ -10,6 +10,3 @@
 
   a
     text-decoration: underline
-
-  p
-    +margin(null null 0)
