--- a/_sass/_header.sass
+++ b/_sass/_header.sass
@@ -1,33 +1,12 @@
 .site-header
   font-family: 'Roboto Condensed', helvetica, sans-serif
-  +margin(1rem null)
-
-  .wrapper:first-child
-    border-bottom: 1px solid $divider-color
+  +margin(2rem null)
 
   &__title
     +display(none)
 
     i
       font-style: inherit
-
-  &__nav
-    color: $secondary-text-color
-
-    ul
-      line-height: 3
-      margin: 0
-
-    li
-      display: inline
-      list-style: none
-      &:last-child
-        a[href]
-          margin-right: 0
-
-    a[href]
-      +margin(0 .8em 0 0)
-      text-rendering: geometricPrecision
 
   &__headline
     display: none
@@ -46,18 +25,15 @@
 
 .main
   .site-header
-    +margin(1rem null 3rem)
+    +margin(1rem null 2rem)
+
+    h1, h2
+      font-family: 'Roboto Condensed', helvetica, sans-serif
+      margin: 0
 
     &__title
       display: block
-      +margin(0)
-
-      h1, h2
-        font-family: 'Roboto Condensed', helvetica, sans-serif
-        margin: 0
-      
-      h2
-        color: $secondary-text-color
+      margin-bottom: 1rem
 
     &__nav
       display: block
@@ -66,34 +42,17 @@
       color: $secondary-text-color
       display: block
 
+.night-mode
+  .site-header
+    &__headline
+      color: $ternary-text-color
+
+    &__nav
+      color: $ternary-text-color
+
 @media only screen and (min-device-width: 568px)
   .main
     .site-header
       .wrapper:first-child
         display: table
         width: calc(100% - 4rem)
-
-      &__title,
-      &__nav
-        display: table-cell
-
-  .site-header
-    +margin(1rem null)
-    &__nav
-      ul
-        +align-items(stretch)
-        +display(flex)
-        +flex(1)
-        +justify-content(flex-end)
-        height: auto
-      li
-        list-style: none
-        +display(flex)
-        +flex-direction(column)
-        +justify-content(center)
-        &:first-child
-          a[href]
-            margin-left: .8em
-        &:last-child
-          a[href]
-            margin-right: 0
