--- a/_sass/_reset.sass
+++ b/_sass/_reset.sass
@@ -3,9 +3,9 @@
   padding: 0
 
 body
-  background: #fff
+  background: $primary-color-text
   color: $primary-text-color
-  font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace
+  font-family: Roboto, Arial, monospace, sans-serif
   font-size: 16px
   line-height: 1.5
   font-smoothing: subpixel-antialiased
@@ -15,6 +15,10 @@ body
   font-feature-settings: "kern" 1, "liga" 1
   max-width: 720px
   +margin(0 auto)
+
+  &.night-mode
+    background: $primary-text-color
+    color: $primary-color-text
 
 h1, h2, h3, h4, h5, h6
   +margin(0 0 .5em)
