Headline moved into page layout

--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -7,3 +7,13 @@ kbd
   border-radius: 3px
   box-shadow: 0 1px 0 rgba(12,13,14,0.2), 0 0 0 2px #FFF inset
   white-space: nowrap
+
+.headline
+  h2
+    color: $secondary-text-color
+    display: block
+    line-height: 2
+
+.night-mode
+  .headline
+    color: $ternary-text-color
