--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,9 @@
           {{ site.html_title }}
         </a>
       </h1>
+      <ul class="social">
+        <li><a href="/feed.xml"><img src="/assets/feed-icon-14x14.png" title="feed" /></a></li>
+      </ul>
     </div>
   </div>
   {% include nav.html %}
