Removed hiding page title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
 {% include head.html %}
-<body class="{% unless page.date %} main{% endunless %}">
+<body>
 {% include content.html %}
 </body>
 </html>
