Fixed proper descriptions for page.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="site-header__title">
       <h1>
         <a href="{{ "/" | relative_url }}">
-          {{ site.html_title }}
+          {{ site.title }}
         </a>
       </h1>
       <ul class="social">
