Underlines for h2. Edited draft.

--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -39,6 +39,8 @@
     &__subheading
       color: $secondary-text-color
       font-size: 14px
+  h2
+    border-bottom: 1px solid
   > p
     font-size: 18px
 
