--- a/_sass/_reset.sass
+++ b/_sass/_reset.sass
@@ -23,6 +23,7 @@ body
 h1, h2, h3, h4, h5, h6
   +margin(0 0 .5em)
   font-family: 'Roboto Condensed', helvetica, sans-serif
+  font-weight: normal
 
   &> a
     background-color: transition !important
