--- a/_sass/_tables.sass
+++ b/_sass/_tables.sass
@@ -6,7 +6,7 @@
     width: 50%
 
 .commands-table
-  font-size: 1.5rem
+  font-size: .9rem
   +margin(0 auto)
   text-align: center
 
@@ -17,10 +17,11 @@
       vertical-align: top 
       width: 10%
 
-.dashed-table
+.solid-table
+  font-size: .9rem
   border-collapse: collapse
   tr
-    border-bottom: 1px dashed $primary-color-dark
+    border-bottom: 1px solid $primary-color-dark
     &:last-child
       border-bottom: 0
   td
