--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -41,8 +41,11 @@
       font-size: 14px
   h2
     border-bottom: 1px solid
+    margin-top: 1.5rem
   > p
     font-size: 18px
+  li
+    overflow-wrap: break-word
 
 .night-mode
   .post-preview,
