--- a/_sass/_tables.sass
+++ b/_sass/_tables.sass
@@ -5,17 +5,15 @@
   &-half
     width: 50%
 
-.commands-table
-  font-size: .9rem
+.arrows-table
+  font-size: 1.5rem
   +margin(0 auto)
   text-align: center
 
-  &-description
-    text-align: left
-
-    td:first-child
-      vertical-align: top 
-      width: 10%
+.commands-table
+  td:first-child
+    vertical-align: top 
+    min-width: 20%
 
 .solid-table
   font-size: .9rem
