--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -17,3 +17,26 @@ kbd
 .night-mode
   .headline
     color: $ternary-text-color
+
+.category
+  font-size: .8em
+  text-transform: uppercase
+
+.tags
+  font-size: .7em
+  
+  li
+    display: inline-block
+    list-style: none
+    +margin(0 .5rem 0 0)
+    &> a
+      background: none
+      border: 1px solid $secondary-text-color
+      color: $secondary-text-color
+      padding: .1rem .2rem
+      text-shadow: none
+      &:hover
+        background: none
+        
+    &:last-child
+      margin-right: 0
