Tags and categories completed

--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -18,6 +18,14 @@ kbd
   .headline
     color: $ternary-text-color
 
+.category,
+.tag
+  &-title
+    color: $secondary-text-color
+
+.category-title
+  text-transform: uppercase
+
 .category
   font-size: .8em
   text-transform: uppercase
