--- a/_sass/_collection.sass
+++ b/_sass/_collection.sass
@@ -1,13 +1,13 @@
 .collection
   font-size: 1.1rem
-  list-style: none
-
-  .collection-item
-    display: block
-    margin: 0 0 .5rem
-
-    &__date
-      color: $secondary-text-color
+  margin: 0 auto
+  td
+    padding: .5rem
+    &:nth-child(1)
+      text-align: right
+  &-date
+    color: $secondary-text-color
+    
 
 @media only screen and (min-device-width: 568px)
   .collection
