Ready to be merge

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="post">
   <header class="post__header">
-    <a href="/categoria/{{page.category}}">{{ page.category }}</a>
+    <a class="category-title" href="/categoria/{{page.category}}">{{ page.category }}</a>
     <h1 class="post__header__heading">
       {{ page.title }}
     </h1>
