--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -12,7 +12,7 @@ kbd
   h2
     color: $secondary-text-color
     display: block
-    line-height: 2
+    margin-bottom: 1rem
 
 .night-mode
   .headline
