Prevent repeated categories and tags

--- a/_includes/post-preview.html
+++ b/_includes/post-preview.html
@@ -1,9 +1,11 @@
 {% assign post=include.post %}
+{% assign currentCategory = page.title | strip_html | downcase %}
+{% assign postCategory = post.category | downcase %}
 <article class="post-preview">
-  {% if include.showCategory != false %}
-  <header class="category">
-    <a href="/categoria/{{post.category}}">{{ post.category }}</a>
-  </header>
+  {% if currentCategory != postCategory %}
+    <header class="category">
+      <a href="/categoria/{{post.category}}">{{ post.category }}</a>
+    </header>
   {% endif %}
   <a class="post-preview__link" href="
     {% if post.permalink %}
