--- a/_layouts/autopages.html
+++ b/_layouts/autopages.html
@@ -2,5 +2,5 @@
 layout: page 
 ---
 {% for post in paginator.posts %}
-  {% include post-preview.html post=post showCategory=false %}
+  {% include post-preview.html post=post %}
 {% endfor %}
