--- a/_includes/tag-list.html
+++ b/_includes/tag-list.html
@@ -1,5 +1,8 @@
+{% assign currentTag = page.title | strip_html %}
 <ul class="tags">
 {% for tag in include.tags %}
-  <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+  {% if currentTag != tag %}
+    <li><a href="/tag/{{ tag }}">{{ tag }}</a></li>
+  {% endif %}
 {% endfor %}
 </ul>
