--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -13,6 +13,7 @@ kbd
     color: $secondary-text-color
     display: block
     margin-bottom: 1rem
+    font-weight: 400
 
 .night-mode
   .headline
