--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
           {% if m_page.title and
             m_page.autogen == nil and
             m_page.autopages == nil and
-            m_page.home != true and
+            m_page.nav != false and
             m_page.title != page.title %}
             <li>
               <a href="{{ m_page.url | relative_url }}">{{ m_page.title }}</a>
