--- a/_sass/_anchors.sass
+++ b/_sass/_anchors.sass
@@ -42,3 +42,13 @@ a.header-link
   &:hover
     background: none
     text-shadow: 0 0 .9px #333, 0 0 .9px #333, 0 0 .9px #333
+
+a[href].not-found-item
+  background-image: none
+  margin-right: .3rem
+  &:after
+    content: ','
+  &:last-child:after
+    content: '.'
+  &:hover
+    background-image: linear-gradient(to bottom, rgba(0,0,0,.5) 50%, rgba(0,0,0,0) 50%)
