--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -14,6 +14,19 @@ kbd
     display: block
     margin-bottom: 1rem
     font-weight: 400
+  &.not-found
+    font-size: 2em
+    text-align: center
+    margin-top: 4rem
+
+.subheadline
+  color: $secondary-text-color
+  font-size: 1em
+  font-weight: 400
+  font-family: 'Roboto Condensed', helvetica, sans-serif
+  &.not-found
+    text-align: center
+    margin-bottom: 4rem
 
 .night-mode
   .headline
