--- a/_sass/_types.sass
+++ b/_sass/_types.sass
@@ -9,24 +9,20 @@ kbd
   white-space: nowrap
 
 .headline
+  color: $secondary-text-color
   h2
-    color: $secondary-text-color
     display: block
     margin-bottom: 1rem
     font-weight: 400
-  &.not-found
     font-size: 2em
-    text-align: center
-    margin-top: 4rem
+  &-subtitle
+    font-family: 'Roboto Condensed', helvetica, sans-serif
 
 .subheadline
   color: $secondary-text-color
   font-size: 1em
   font-weight: 400
   font-family: 'Roboto Condensed', helvetica, sans-serif
-  &.not-found
-    text-align: center
-    margin-bottom: 4rem
 
 .night-mode
   .headline
