--- a/_layouts/not-found.html
+++ b/_layouts/not-found.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
-{% assign scripts = "easing animation" %}
+{% assign scripts = "animation easing" %}
 {% include head.html scripts=scripts %}
 <body class="not-found">
   <div class="wrapper">
