--- a/_layouts/not-found.html
+++ b/_layouts/not-found.html
@@ -1,8 +1,12 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "es" }}">
 {% assign scripts = "animation easing" %}
 {% include head.html scripts=scripts %}
 <body class="not-found">
+  <!-- SOY UN COMENTARIO -->
   <div class="wrapper">
     <div id="filter-header" class="not-found-header"> 
       <div class="headline">
